--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -110,6 +110,11 @@ a:hover{
     flex-direction: column;
 }
 
+.date-book > a{
+    float: right;
+    margin-right: 20px;
+}
+
 .book_name {
     display: flex;
     width: 100%;
@@ -134,4 +139,13 @@ a:hover{
 
 .book_author {
     color: #6b6b6b
+}
+.empty_cart{
+    display: flex;
+    background-color: white;
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
