--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -151,3 +151,9 @@ a:hover{
     justify-content: center;
     align-items: center;
 }
+.alert-warning{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+}
