--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -85,7 +85,7 @@ a:hover{
 .book {
     display: flex;
     width: 100%;
-    height: 240px;
+    height: 100%;
     background-color: white;
     border-radius: 5px;
     margin-bottom: 5px;
@@ -117,8 +117,14 @@ a:hover{
     margin-right: 20px;
 }
 
+.date-book > form > a {
+    float: right;
+    margin-right: 20px;
+}
+
 .book_name {
     display: flex;
+    justify-content: space-between;
     width: 100%;
 }
 
@@ -151,9 +157,21 @@ a:hover{
     justify-content: center;
     align-items: center;
 }
-.alert-warning{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
+.close{
+    margin-top: 5px;
+    top: 50%; left: 50%;
+    width: 30px;
+    height: 30px;
+    color: red;
+}
+.close:before,
+.close:after{
+    content: '';
+    top: 0;
+    width: 2px;
+    height: 100%;
+    color: red;
+}
+.close:hover{
+    cursor: pointer;
 }
